--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea
 /Frontend/003 - UIUX/135. Spaltenraster/index.css.map
 /Frontend/003 - UIUX/137. Responsive Images/index.css.map
+/Frontend/003 - UIUX/148. Eigene Animationen in CSS/index.css
+/Frontend/003 - UIUX/148. Eigene Animationen in CSS/index.css.map
