from - to Element

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Frontend/003 - UIUX/137. Responsive Images/index.css.map
 /Frontend/003 - UIUX/148. Eigene Animationen in CSS/index.css
 /Frontend/003 - UIUX/148. Eigene Animationen in CSS/index.css.map
+/Frontend/003 - UIUX/150. From - to/index.css
+/Frontend/003 - UIUX/150. From - to/index.css.map
