--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Frontend/003 - UIUX/148. Eigene Animationen in CSS/index.css.map
 /Frontend/003 - UIUX/150. From - to/index.css
 /Frontend/003 - UIUX/150. From - to/index.css.map
+/Frontend/003 - UIUX/151. Animation Shortcut/index.css
+/Frontend/003 - UIUX/151. Animation Shortcut/index.css.map
