--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Frontend/003 - UIUX/150. From - to/index.css.map
 /Frontend/003 - UIUX/151. Animation Shortcut/index.css
 /Frontend/003 - UIUX/151. Animation Shortcut/index.css.map
+/Kursmaterialien.zip
