--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Frontend/003 - UIUX/151. Animation Shortcut/index.css
 /Frontend/003 - UIUX/151. Animation Shortcut/index.css.map
 /Kursmaterialien.zip
+/Erster Test.pdf
